# game_translator

./: .gitignore  README.md  main.py  pyproject.toml
base/: deepl_translate_abc.py  translate_meta.py
data/result/: translations.toml  translations0.toml  translations2.toml
data/source/: cleanup.toml  raw_file_en.txt  raw_file_ru.txt  test.rpy
models/: languages.py  languges.py
settings/: config.py  env.example  logger.py
src/: translatpr.py  translatpr_rpy.py  translatpr_toml.py
src/translators/: translatpr_rpy.py
src/translators/chatgpt/: raw_files_translation.py  rpy_files_translation.py  toml_files_translation.py
src/translators/deepl/: translatpr_rpy.py  translatpr_toml.py
